# realtime-voting

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  defaultSettings.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  spark-streaming.py  streamlit-app.py  test_phase1.py  voting.py
.github/workflows/: ci.yml
config/: __init__.py  settings.py
database/: __init__.py  connection.py  exceptions.py  repositories.py  schemas.sql
kafka_utils/: __init__.py  consumer.py  exceptions.py  producer.py  serializers.py
models/: __init__.py  candidate.py  vote.py  voter.py
services/: __init__.py  data_generator.py  voting_service.py
tests/: test_data_generator.py  test_repositories.py  test_serializers.py
ui/components/: charts.py  tables.py
