[project]
name = "realtime-voting"
version = "0.1.0"
description = "Real-time election voting system using Kafka, Spark Streaming, PostgreSQL, and Streamlit"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Phase 1: Configuration and validation
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "email-validator>=2.1",
    # Data processing
    "pyspark>=3.5",
    "pandas>=2.1",
    "numpy>=1.26",
    # Kafka messaging
    "confluent-kafka>=2.3",
    "simplejson>=3.19",
    # Database
    "psycopg2-binary>=2.9",
    # Visualization and UI
    "streamlit>=1.29",
    "streamlit-autorefresh>=1.0",
    "matplotlib>=3.8",
    # Utilities
    "requests>=2.31",
    "faker>=20.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "models"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by ruff format)
]
exclude = [
    ".git",
    ".venv",
    "checkpoints",
    "__pycache__",
]
